
  [ You-Sheng Yang ]
  * Add a dependency on tzdata, used by mk-sbuild.

  [ Logan Rosen ]
  * import-bug-from-debian:
    + Limit bug description length to 50k chars to support Launchpad's limits.
      LP: #1193941

  [ Dimitri John Ledkov ]
  * pullpkg.py: fix --mirror option parsing.
  * config.py: add UBUNTU_INTERNAL_MIRROR option, for launchpad internal
    mirror.

 -- Mattia Rizzolo <mattia@debian.org>  Tue, 22 Dec 2020 17:50:52 +0100

ubuntu-dev-tools (0.177) unstable; urgency=medium

  [ Dan Streetman ]
  * Verify checksums for downloaded binary files
  * pullpkg: support pulling from Ubuntu upload queues

  [ Mattia Rizzolo ]
  * ubuntu-build:
    + Add support for riscv64.
  * syncpackge:
    + Fix the new flake8 E741.  Closes: #963310

  [ Bryce Harrington ]
  * update-maintainer:
    + Try to recurse upwards to find a valid debian directory.  LP: #1885233

 -- Mattia Rizzolo <mattia@debian.org>  Sun, 28 Jun 2020 15:52:27 +0200

ubuntu-dev-tools (0.176) unstable; urgency=medium

  [ Debian Janitor ]
  * Fix day-of-week for changelog entry 0.66.

  [ Mattia Rizzolo ]
  * pbuilder-dist:
    + Add support for riscv64.  LP: #1859277
  * d/control: Bump Standards-Version to 4.5.0, no changes needed.

  [ Colin Watson ]
  * Use +sourcefiles URLs where possible.  LP: #1860456

  [ Dan Streetman ]
  * submittodebian:
    + Open file in binary mode before writing utf-8 encoded bytes.  LP: #1863119
  * ubuntu-upload-permission:
    + Explicitly sort packagesets by name.  LP: #1862372
  * pullpkg:
    + For "-p list", show bpph arch for files built for 'all' arch.
  * archive.py:
    + If using local file, avoid error trying to copy file to itself.
    + Allow pull_binaries() to accept arch=None.
  * lpapicache:
    + Remove SPPH _have_all_binaries flag, as there are cases where it yield
      unexpected results.
    + Remove fallback_arch from getBinaries.
    + Allow getBinaries(arch=None) to get all archs.  LP: #1862286
